--- a/api-reference/moderate/analyze-text.mdx
+++ b/api-reference/moderate/analyze-text.mdx
@@ -7,21 +7,28 @@ title: "Moderate Text"
 <RequestExample>
 
 ```javascript Node.js
-import ModerationApi from "@moderationapi/sdk";
+import ModerationAPI from "@moderation-api/sdk";
 
-const moderationApi = new ModerationApi({
-  apiKey: "<token>",
+const moderationApi = new ModerationAPI({
+  key: "<token>",
 });
 
-const result = await moderationApi.moderate.text({
-  value: "Hello world",
+const result = await moderationApi.content.submit({
+  content: {
+    type: "text",
+    text: "Hello world",
+  },
   contentId: "post-123",
   authorId: "user-123",
-  contextId: "room-123",
+  conversationId: "room-123",
   metadata: {
     source: "chat",
   },
 });
+
+// Check result
+console.log(result.evaluation.flagged); // boolean
+console.log(result.recommendation.action); // 'allow', 'review', or 'reject'
 ```
 
 ```ruby Ruby
