--- a/users/overview.mdx
+++ b/users/overview.mdx
@@ -61,11 +61,17 @@ Here's a common workflow for implementing user management in your moderation sys
 Start by including an `authorId` when submitting content for moderation:
 
 ```javascript
-const response = await fetch("https://api.moderationapi.com/v1/moderate/text", {
+const response = await fetch("https://api.moderationapi.com/v1/moderate", {
   method: "POST",
-  headers: { Authorization: "Bearer YOUR_API_KEY" },
+  headers: {
+    Authorization: "Bearer YOUR_API_KEY",
+    "Content-Type": "application/json",
+  },
   body: JSON.stringify({
-    content: "User's message content",
+    content: {
+      type: "text",
+      text: "User's message content",
+    },
     authorId: "user_123",
   }),
 });
