--- a/api-reference/moderate/analyze-text.mdx
+++ b/api-reference/moderate/analyze-text.mdx
@@ -69,7 +69,7 @@ payload = {
     "value": "Hello world",
     "contentId": "post-123",
     "authorId": "user-123",
-    "contextId": "room-123",
+    "": "room-123",
     "metadata": {
         "source": "chat"
     }
