--- a/api-reference/authentication.mdx
+++ b/api-reference/authentication.mdx
@@ -3,7 +3,7 @@ title: "Authentication"
 description: "How to authenticate with the API"
 ---
 
-The Moderation API uses [API keys](/content-moderation/manage-api-key) to authenticate requests. Each project has its own API key. You can view and manage your API keys in the [dashboard](https://moderationapi.com/dashboard) -> Project -> Integrate.
+The Moderation API uses [API keys](/content-moderation/manage-api-key) to authenticate requests. Each project has its own API key. You can view and manage your API keys in the [dashboard](https://moderationapi.com/dashboard) -> Project -> Configure.
 
 Your API keys carry many privileges, so be sure to keep them secure. Don't share your secret API keys in publicly accessible areas such as GitHub, client-side code, and so forth.
 
